syntax = "proto3";

package msg;

message LoginREQ {
	string Version = 1;
	string Platform = 2;
	string UID = 3;
}


message LoginACK {
	ResultCode Result = 1;
	ServerInfo Server = 2;
	string GameToken = 3;
	string GameSvcID = 4;// 选中的一台game服务器ID
}

message PingREQ {
}

message PingACK {
}

enum ResultCode {
	NoError = 0;
	AgentNotFound = 101;
	AgentAddressError = 102;
	GameNotFound = 103;
}

message ServerInfo {
	string IP = 1;
	int32 Port = 2;
}


message VerifyREQ {
	string GameToken = 1;
	string GameSvcID = 2;
}


message VerifyACK {
	ResultCode Result = 1;
}


message ChatREQ {
	string Content = 1;
}


message ChatACK {
	string Content = 1;
}


message TestACK {
	string Dummy = 1;
}


message TestEchoACK {
	string Msg = 1;
	int32 Value = 2;
}

